propogate notebook name changes

--- a/processing/create_zarr_store.ipynb
+++ b/processing/create_zarr_store.ipynb
@@ -2104,7 +2104,7 @@
    "source": [
     "## Next steps\n",
     "\n",
-    "With the zarr store initialized, we can process tiles and write to the zarr store in `runoff_onset_parallel.ipynb`. The store supports concurrent writes from multiple workers, enabling efficient parallel processing of the global dataset!!!"
+    "With the zarr store initialized, we can process tiles and write to the zarr store in `process_tiles.ipynb`. The store supports concurrent writes from multiple workers, enabling efficient parallel processing of the global dataset!!!"
    ]
   }
  ],
