--- a/processing/process_tiles.ipynb
+++ b/processing/process_tiles.ipynb
@@ -22,10 +22,11 @@
     "\n",
     "Before large-scale processing...\n",
     "\n",
+    "1. use [egagli/MODIS_seasonal_snow_mask](https://github.com/egagli/MODIS_seasonal_snow_mask) to create the seasonal snow cover dataset (contains: snow appearance date, snow disappearnce date, max consecutive number of snow cover days, all per water year) \n",
     "1. check if config file looks good, make sure to update paths with version number!!!!\n",
-    "1. cloud credentials updated if needed (i.e. `config/sas_token.txt` and `ee_key.json`)\n",
-    "1. `tiles_to_process.ipynb` ran and `tile_data/global_tiles_with_seasonal_snow.geojson` created\n",
-    "1. `make_zarr_store.ipynb` ran and zarr_store exists on cloud storage and can be read\n",
+    "1. cloud credentials updated if needed (i.e. `config/sas_token.txt` and `ee_key.json`) (note to self: use [egagli/azure_authentication](https://github.com/egagli/azure_authentication) to get new sas_token weekly)\n",
+    "1. `select_tiles_to_process.ipynb` ran and `tile_data/global_tiles_with_seasonal_snow.geojson` created\n",
+    "1. `create_zarr_store.ipynb` ran and zarr_store exists on cloud storage and can be read\n",
     "1. coiled is working and using spot instances and price isn't too high--check usage stats too!!\n",
     "1. check tiles are being output to `tile_data/tile_results_vX.csv` and tiles are showing success\n",
     "1. check tiles are being processed with `view_maps.ipynb`, check all variables\n",
@@ -420,11 +421,14 @@
     "\n",
     "Select tiles for processing based on different criteria:\n",
     "- **`'all'`**: all global coverage\n",
-    "- **`'processed'`**: Successfully completed tiles  \n",
-    "- **`'failed'`**: Tiles that encountered errors\n",
-    "- **`'unprocessed'`**: Tiles not yet attempted\n",
-    "- **`'unprocessed_and_failed'`**: Tiles needing processing or reprocessing. Unless you have a specific need / debugging, you should probably use this one.\n",
-    "- **`'unprocessed_and_failed_weather_stations'`**: Unprocessed/failed tiles that contain automatic weather stations. Useful for validation."
+    "- **`'processed'`**: successfully completed tiles  \n",
+    "- **`'failed'`**: tiles that encountered errors\n",
+    "- **`'unprocessed'`**: tiles not yet attempted\n",
+    "- **`'unprocessed_and_failed'`**: tiles needing processing or reprocessing. Unless you have a specific need / debugging, you should probably use this one.\n",
+    "- **`'unprocessed_and_failed_weather_stations'`**: unprocessed/failed tiles that contain automatic weather stations. Useful for validation.\n",
+    "\n",
+    "\n",
+    "Provide one of these arguments to `config.get_list_of_tiles(which=)`"
    ]
   },
   {
