update processing with new dtypes

--- a/processing/process_tiles.ipynb
+++ b/processing/process_tiles.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = Config('../config/global_config_v7.txt')"
+    "config = Config('../config/global_config_v8.txt')"
    ]
   },
   {
@@ -89,27 +89,64 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# # coiled.list_instance_types(backend=\"azure\") <- vm types available for azure\n",
+    "# cluster = coiled.Cluster(idle_timeout=\"10 minutes\",\n",
+    "#                          name=\"snowmelt-runoff-onset\",\n",
+    "#                          n_workers=30,\n",
+    "#                          worker_memory=\"32 GB\", # use 32 normally, 64 for problem tiles\n",
+    "#                          worker_cpu=4, # use 4/8 normally, 8 for problem tiles\n",
+    "#                          scheduler_memory=\"64 GB\", # use 64 normally, 128 for problem tiles \n",
+    "#                          spot_policy=\"spot\", # spot usually\n",
+    "#                          environ={\"GDAL_DISABLE_READDIR_ON_OPEN\": \"EMPTY_DIR\"},\n",
+    "#                          workspace=\"uwtacolab\", # azure\n",
+    "#                          )\n",
+    "\n",
+    "# client = cluster.get_client()\n",
+    "# client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# coiled.list_instance_types(backend=\"azure\") <- vm types available for azure\n",
     "cluster = coiled.Cluster(idle_timeout=\"10 minutes\",\n",
-    "                         n_workers=6,\n",
-    "                         worker_memory=\"32 GB\", #coiled.list_instance_types(backend=\"azure\")\n",
-    "                         worker_cpu=4,\n",
-    "                         #worker_options={\"nthreads\": 1},\n",
-    "                         #worker_options={\"nthreads\": 32},# 16 8 4 oversubscribe?\n",
-    "                         #scheduler_memory=\"128 GB\",\n",
-    "                         #scheduler_memory=\"64 GB\",\n",
+    "                         name=\"snowmelt-runoff-onset\",\n",
+    "                         n_workers=60,\n",
+    "                         worker_memory=\"32 GB\", # use 32 normally, 64 for problem tiles\n",
+    "                         worker_cpu=4, # use 4/8 normally, 8 for problem tiles\n",
+    "                         scheduler_memory=\"128 GB\", # use 64 normally, 128 for problem tiles \n",
     "                         spot_policy=\"spot\", # spot usually\n",
     "                         environ={\"GDAL_DISABLE_READDIR_ON_OPEN\": \"EMPTY_DIR\"},\n",
     "                         workspace=\"uwtacolab\", # azure\n",
-    "                         \n",
     "                         )\n",
     "\n",
     "client = cluster.get_client()\n",
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # coiled.list_instance_types(backend=\"azure\") <- vm types available for azure\n",
+    "# cluster = coiled.Cluster(idle_timeout=\"10 minutes\",\n",
+    "#                          name=\"snowmelt-runoff-onset\",\n",
+    "#                          n_workers=60,\n",
+    "#                          worker_memory=\"16 GB\", # use 32 normally, 64 for problem tiles\n",
+    "#                          worker_cpu=4, # use 4/8 normally, 8 for problem tiles\n",
+    "#                          scheduler_memory=\"64 GB\", # use 64 normally, 128 for problem tiles \n",
+    "#                          spot_policy=\"spot\", # spot usually\n",
+    "#                          environ={\"GDAL_DISABLE_READDIR_ON_OPEN\": \"EMPTY_DIR\"},\n",
+    "#                          workspace=\"uwtacolab\", # azure\n",
+    "#                          )\n",
     "\n",
-    "#use the following config for the problem tiles, otherwise 4 and 32, 8 and 32\n",
-    "                        #  worker_memory=\"64 GB\", \n",
-    "                        #  worker_cpu=8,\n",
-    "\n",
-    "odc.stac.configure_rio(cloud_defaults=True, client=client)"
+    "# client = cluster.get_client()\n",
+    "# client"
    ]
   },
   {
@@ -174,7 +211,7 @@
     "            fail_on_error=True,\n",
     "        )\n",
     "\n",
-    "        s1_rtc_ds[\"vv\"] = s1_rtc_ds[\"vv\"].chunk(config.chunks_s1_process).persist()\n",
+    "        #s1_rtc_ds[\"vv\"] = s1_rtc_ds[\"vv\"].chunk(config.chunks_s1_process).persist() #config.chunks_s1_process\n",
     "        print(\"Data retrieved.\")\n",
     "\n",
     "        tile.s1_rtc_ds_dims = dict(s1_rtc_ds.sizes)\n",
@@ -215,18 +252,25 @@
     "                min_monthly_acquisitions=config.min_monthly_acquisitions,\n",
     "                max_allowed_days_gap_per_orbit=config.max_allowed_days_gap_per_orbit,\n",
     "            )\n",
-    "        ).persist()\n",
+    "        )#.persist()\n",
+    "\n",
     "        print(\"Filtering completed.\")\n",
+    "\n",
     "\n",
     "        print(\"Calculating temporal resolution...\")\n",
     "        temporal_resolution_da = processing.get_temporal_resolution(\n",
     "            s1_rtc_masked_filtered_ds, spatiotemporal_snow_cover_mask_ds\n",
-    "        ).persist()\n",
+    "        )#.persist()\n",
     "\n",
     "        tile_median_temporal_resolution = temporal_resolution_da.median(\n",
     "            dim=[\"latitude\", \"longitude\"]\n",
     "        )\n",
     "        tile_pixel_count = temporal_resolution_da.count(dim=[\"latitude\", \"longitude\"])\n",
+    "\n",
+    "        tile_median_temporal_resolution, tile_pixel_count = dask.compute(\n",
+    "            tile_median_temporal_resolution, tile_pixel_count\n",
+    "        )\n",
+    "\n",
     "\n",
     "        for water_year in config.water_years:\n",
     "            if water_year in tile_median_temporal_resolution.water_year:\n",
@@ -246,7 +290,7 @@
     "            processing.calculate_runoff_onset,\n",
     "            returned_dates_format=\"dowy\",\n",
     "            return_constituent_runoff_onsets=False,\n",
-    "        )\n",
+    "        )#.persist()\n",
     "        print(\"Runoff onsets calculated.\")\n",
     "\n",
     "        tile.runoff_onsets_dims = dict(runoff_onsets_da.sizes)\n",
@@ -346,9 +390,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#client.restart()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# tiles = config.get_list_of_tiles(which='all')\n",
     "# tile=tiles[0]\n",
     "tile = config.get_tile(23,39)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# s1_ds = processing.get_sentinel1_rtc(\n",
+    "#     tile.geobox,\n",
+    "#     bands=config.bands,\n",
+    "#     start_date=config.start_date,\n",
+    "#     end_date=config.end_date,\n",
+    "#     chunks_read=config.chunks_s1_read,\n",
+    "#     fail_on_error=True,\n",
+    "# )\n",
+    "# s1_ds\n",
+    "\n",
+    "# items = (\n",
+    "#     pystac_client.Client.open(\"https://planetarycomputer.microsoft.com/api/stac/v1\",modifier=planetary_computer.sign_inplace)\n",
+    "#     .search(\n",
+    "#         intersects=tile.geobox.geographic_extent,\n",
+    "#         collections=[\"sentinel-1-rtc\"],\n",
+    "#         datetime=(config.start_date, config.end_date),\n",
+    "#     )\n",
+    "#     .item_collection()\n",
+    "# )\n",
+    "# items"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using to calc GB processed\n",
+    "# import pandas as pd\n",
+    "# import ast\n",
+    "# import numpy as np\n",
+    "\n",
+    "# # Read the CSV file\n",
+    "# df = pd.read_csv('tile_data/tile_results_v5.csv')\n",
+    "\n",
+    "# # Extract time values from s1_rtc_ds_dims column\n",
+    "# time_values = []\n",
+    "# for dims_str in df['s1_rtc_ds_dims']:\n",
+    "#     # Skip NaN values\n",
+    "#     if pd.isna(dims_str):\n",
+    "#         continue\n",
+    "#     try:\n",
+    "#         # Convert string representation of dict to actual dict\n",
+    "#         dims_dict = ast.literal_eval(dims_str)\n",
+    "#         time_values.append(dims_dict['time'])\n",
+    "#     except (ValueError, SyntaxError):\n",
+    "#         # Skip any malformed entries\n",
+    "#         continue\n",
+    "\n",
+    "# # Sum all time values\n",
+    "# total_time_steps = sum(time_values)\n",
+    "# total_gb = total_time_steps * 0.0156\n",
+    "# print(f\"Total time across all tiles: {total_time_steps}\")\n",
+    "# print(f\"Total data processed (GB): {total_gb}\")\n",
+    "# print(f\"Number of valid tiles processed: {len(time_values)}\")\n"
    ]
   },
   {
@@ -384,7 +501,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "computed_result = future.result()"
+    "computed_result = future.result()\n",
+    "computed_result"
    ]
   },
   {
@@ -399,18 +517,6 @@
     ")\n",
     "df\n",
     "# rio 250 sec"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in df.columns:\n",
-    "    # print the temporal resolutions\n",
-    "   if col.startswith('tr_'):\n",
-    "       print(f\"Temporal resolution for {col}: {df[col].values}\")"
    ]
   },
   {
@@ -437,8 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#tiles = config.get_list_of_tiles(which='unprocessed_and_failed')\n",
-    "tiles = config.get_list_of_tiles(which='unprocessed_and_failed_weather_stations') # run this to process the tiles with weather stations"
+    "client.restart()"
    ]
   },
   {
@@ -447,9 +552,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "batch_size = 20\n",
+    "#tiles = config.get_list_of_tiles(which='unprocessed_and_failed')\n",
+    "tiles = config.get_list_of_tiles(which='unprocessed_and_failed_weather_stations') # run this to process the tiles with weather stations\n",
+    "#tiles = config.get_list_of_tiles(which='unprocessed_and_failed')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch_size = 10\n",
     "tile_batches = [tiles[i:i + batch_size] for i in range(0, len(tiles), batch_size)]\n",
     "\n",
+    "odc.stac.configure_rio(cloud_defaults=True, client=client)\n",
     "\n",
     "for tile_batch in tqdm.tqdm(tile_batches, total=len(tile_batches)):\n",
     "\n",
@@ -486,7 +603,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "client.restart() # restart the client to clear memory"
+   ]
   },
   {
    "cell_type": "code",
